# market_documents_intel

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  roadmap.md
config/: companies.yaml
data/: all_metadata.csv  discovered_candidates.json  kp2_metadata.csv  metadata_review.csv  report_import_manifest.csv  report_manifest.csv  report_scan_manifest.csv
data/audits/: alignment_audit.csv  deterministic_feature_review_sample.csv  (+8 more)
jse_iar_downloader/: README.md  download_reports.py  requirements.txt
migrations/: env.py
tests/: _feature_fixtures.py  conftest.py  test_afrocentric_dual_period.py  test_alignment_audit.py  test_alignment_candidates.py  test_alignment_quality.py  test_block_classification.py  test_corpus_audit.py  test_db_check.py  test_embedding_audit.py  test_embedding_integrity.py  test_extraction_migration.py  test_extraction_quality.py  test_extraction_service.py  test_feature_audit.py  test_feature_cli.py  test_feature_export.py  test_feature_extraction.py  test_feature_metrics.py  test_feature_migration.py  test_feature_quality.py  test_header_footer_detection.py  test_import.py  test_metadata_and_validation.py  test_metadata_review.py  test_migrations.py  test_models.py  test_narrative_construction.py  test_oversized_passage_audit.py  test_pairing.py  test_passage_alignment.py  test_passage_embedding.py  test_passage_migration.py  test_passage_segmentation.py  test_pdf_access.py  test_pdf_extraction.py  test_segmentation_audit.py  test_similarity_audit.py  test_similarity_config.py  test_similarity_hardening_migration.py  (+7 more)
(+79 files in other folders)
