[project]
name = "market-documents"
version = "0.1.0"
description = "JSE annual-report disclosure intelligence application"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "pypdf[crypto]>=4.2",
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
]

[project.scripts]
market-documents = "market_documents.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_documents"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
